prevent items from going over navbar, make z-index 1

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -5,7 +5,7 @@
 
 .nav {
     position: fixed;
-    top: -20px;
+    top: 0px;
     left: 0;
     right: 0;
     background-color: rgb(38, 38, 38);
@@ -14,6 +14,7 @@
     align-items: center;
     height: 4vw;
     transition: all 0s ease-in-out;
+    z-index: 1;
 }
 
 .nav > ul {
